# nuts-bot

./: .gitignore  config.json  main.py  pyproject.toml
bot/: enums.py  exceptions.py  log.py  strategy.py
bot/exchanges/: __init__.py  base.py  binance.py  test.py
bot/tests/: bybit_precision.py  test_side_math.py  test_strategy.py  test_utils_math.py
bot/utils/: math.py
