[tool.poetry]
name = "dynamic-grid-strategy"
version = "0.1.0"
description = ""
authors = ["yangxg <zmrenwu@163.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.3"
ccxt = "^1.37.51"
yufuquantsdk = {git = "https://github.com/yufuquant/yufuquant-sdk.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
